--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
 	],
 	"autoload" : {
 		"psr-0" : {
-			"imagemanipulation" : "imagemanipulation"
+			"imagemanipulation" : ""
 		}
 	},
 	"support" : {
