added PHPUnit preferences

--- a/.settings/org.phpsrc.eclipse.pti.tools.phpunit.prefs
+++ b/.settings/org.phpsrc.eclipse.pti.tools.phpunit.prefs
@@ -3,8 +3,8 @@ debug_print_output=true
 eclipse.preferences.version=1
 generate_code_coverage=false
 pear_library=<Internal>
-php_executable=5.4.15
-source_file_pattern_folder=
+php_executable=PHP 5.4.31
+source_file_pattern_folder=imagemanipulation
 test_file_pattern_file=%fTest.%e
 test_file_pattern_folder=\\%p\\tests\\%d
 test_file_super_class=PHPUnit_Framework_TestCase
