--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,22 @@ language: php
 php:
   - 5.3
   - 5.4
+  - 5.5
+  - 5.6
+  - 7.0
+  - hhvm
+
+matrix:
+  allow_failures:
+    - php: 7.0
+    - php: hhvm
+    
+sudo: false
+
+before_install:
+  - composer self-update
+
+install:
+  - travis_retry composer install --no-interaction --prefer-source
+  
 script: phpunit tests --configuration phpunit.xml --coverage-text
