--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "gulp": "^3.9.0",
     "gulp-notify": "^2.2.0",
-    "gulp-phpunit": "^0.9.1"
+    "gulp-phpunit": "^0.9.1",
+    "lodash": "^3.10.1"
   }
 }
