--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
   },
   "homepage": "https://github.com/elgervb/imagemanipulation",
   "devDependencies": {
-    "browser-sync": "^2.9.3",
-    "gulp": "^3.9.0",
+    "browser-sync": "^2.10.0",
+    "gulp": "3.9.0",
     "gulp-connect-php": "0.0.5",
-    "gulp-notify": "^2.2.0",
+    "gulp-if": "^2.0.0",
+    "gulp-notify": "2.2.0",
     "gulp-phpunit": "^0.9.1",
-    "lodash": "^3.10.1"
+    "lodash": "^3.10.1",
+    "yargs": "^3.30.0"
   }
 }
