--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   },
   "scripts": {
     "test": "./vendor/phpunit/phpunit/phpunit -c ./phpunit.xml",
-    "test:coverage": "$npm_package_scripts_test --coverage-html ./tmp/report",
-    "watch": "gulp test:watch",
-    "start": "php -S localhost:4000 -t example/ -c php.ini"
+    "test:coverage": "$npm_package_scripts_test --coverage-text --coverage-html ./tmp/report",
+    "watch": "gulp test:watch --coverage",
+    "start": "php -S localhost:4000 -t examples/ -c php.ini"
   },
   "repository": {
     "type": "git",
