--- a/.travis.yml
+++ b/.travis.yml
@@ -20,4 +20,4 @@ before_install:
 install:
   - travis_retry composer install --no-interaction --prefer-source
   
-script: phpunit tests --configuration phpunit.xml --coverage-text
+script: npm run test:coverage
