better class loading (incl tests)
fixed #39

--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,16 @@
 	},
 	"autoload" : {
 		"psr-0" : {
-			"imagemanipulation" : ""
+			"imagemanipulation" : [
+				"",
+				"tests"
+			],
+			"test" : [
+				"tests"
+			],
+			"mocks" : [
+				"tests"
+			]
 		}
 	},
 	"support" : {
