--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
 		"MIT"
 	],
 	"require-dev" : {
-		"phpunit/phpunit" : "^4.8"
+		"phpunit/phpunit" : "^4.8",
+		"phpdocumentor/phpdocumentor": "2.*"
 	},
 	"autoload" : {
 		"psr-0" : {
