--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
 	],
 	"require-dev" : {
 		"phpunit/phpunit" : "^4.8",
-		"phpdocumentor/phpdocumentor": "2.*"
+		"phpdocumentor/phpdocumentor": "2.*",
+		"phpmd/phpmd" : "@stable"
 	},
 	"autoload" : {
 		"psr-0" : {
