--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test:coverage": "$npm_package_scripts_test --coverage-text --coverage-html ./tmp/report",
     "watch": "gulp test:watch --coverage",
     "start": "php -S localhost:4000 -t examples/ -c php.ini examples/router.php",
-    "docs": "php vendor/bin/phpdoc -d ./imagemanipulation -t ./tmp/docs"
+    "docs": "php vendor/bin/phpdoc -d ./imagemanipulation -t ./tmp/docs",
+    "phpmd": "php vendor/bin/phpmd ./imagemanipulation html cleancode --reportfile ./tmp/phpmd.html"
   },
   "repository": {
     "type": "git",
