--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,12 @@ php:
   - 5.6
   - 7.0
   - hhvm
-  - nightly
 
 matrix:
   allow_failures:
     - php: 7.0
     - php: hhvm
+    - php: nightly
     
 sudo: false
 
