--- a/.travis.yml
+++ b/.travis.yml
@@ -21,4 +21,4 @@ before_install:
 install:
   - travis_retry composer install --no-interaction --prefer-source
   
-script: npm run test:coverage
+script: phpunit tests --configuration phpunit.xml --coverage-text
